# StudentManagementSystem

./: .gitignore  CMakeLists.txt  LICENSE  README.md  export.ini
data/: export.ini
data_gen/: fake_data_gen.py  requirements.txt
include/: average.h  class_average.h  class_highest.h  class_lowest.h  course.h  data_io.h  gpa.h  gpa_ranking.h  highest.h  input.h  lowest.h  query.h  sort.h  statistics.h  student.h
include/calculate/: gpa.h
include/calculate/class/: class_average.h  class_highest.h  class_lowest.h
include/calculate/total/: average.h  gpa_ranking.h  highest.h  lowest.h
include/config/: course.h  student.h
include/info/: query.h  sort.h  statistics.h
include/io/: data_io.h  input.h
include/utils/: utils.h
src/: main.c
src/calculate/: gpa.c
src/calculate/class/: class_average.c  class_highest.c  class_lowest.c
src/calculate/total/: average.c  gpa_ranking.c  highest.c  lowest.c
src/info/: query.c  sort.c  statistics.c
src/io/: data_io.c  input.c
src/utils/: utils.c
test/: CMakeLists.txt  hello_test.cc
